<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="label_result">Result</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="label_division">/</string>
    <string name="mul_symbol">*</string>
    <string name="sub_symbol">-</string>
    <string name="dot_symbol">.</string>
    <string name="equal_symbol">=</string>
    <string name="plus_symbol">+</string>
    <string name="clear_symbol">C</string>
</resources>
