<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
            android:id="@+id/infoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_vertical_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/largest_text_size"/>
    <EditText
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoText"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="text"
            android:enabled="false"
            android:gravity="bottom"
            android:lines="2"
            android:maxLines="2"
            android:textSize="@dimen/larger_text_size"
            android:textColor="@color/colorAccent"
            tools:targetApi="o"/>
    <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/resultText"
            android:text="@string/number_seven"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/resultText"
            android:layout_toEndOf="@id/sevenButton"
            android:text="@string/number_eight"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/resultText"
            android:layout_toEndOf="@id/eightButton"
            android:text="@string/number_nine"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/divButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/resultText"
            android:layout_toEndOf="@id/nineButton"
            android:text="@string/label_division"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/sevenButton"
            android:text="@string/number_four"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/eightButton"
            android:layout_below="@id/eightButton"
            android:text="@string/number_five"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/nineButton"
            android:layout_below="@id/nineButton"
            android:text="@string/number_six"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/divButton"
            android:layout_below="@id/divButton"
            android:text="@string/mul_symbol"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/fourButton"
            android:text="@string/number_one"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/fiveButton"
            android:layout_below="@id/fiveButton"
            android:text="@string/number_two"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/sixButton"
            android:layout_below="@id/sixButton"
            android:text="@string/number_three"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/subButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/multiplyButton"
            android:layout_below="@id/multiplyButton"
            android:text="@string/sub_symbol"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/dotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/oneButton"
            android:text="@string/dot_symbol"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/zeroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/twoButton"
            android:layout_below="@id/twoButton"
            android:text="@string/number_zero"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/equalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/threeButton"
            android:layout_below="@id/threeButton"
            android:text="@string/equal_symbol"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/subButton"
            android:layout_below="@id/subButton"
            android:text="@string/plus_symbol"
            android:textSize="@dimen/normal_text_size"/>
    <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignEnd="@id/plusButton"
            android:layout_below="@id/plusButton"
            android:text="@string/clear_symbol"
            android:textSize="@dimen/normal_text_size"/>
</RelativeLayout>
